# xemacs-chise

./: .cvsignore  CHANGES-beta  CHANGES-msw  CHANGES-release  ChangeLog  INSTALL  Makefile.in  Makefile.in.in  PROBLEMS  README  README.packages  aclocal.m4  build-msw-release.sh  config.guess  config.sub  configure  configure.in  configure.usage  version.sh
dynodump/: Makefile.in.in  dynodump.c
etc/: BETA  CHISE-VERSIONS  DISTRIB  Emacs.ad  FTP  HELLO  MACHINES  MAILINGLISTS  MYTHOLOGY  NEWS  OONEWS  OXYMORONS  PACKAGES  README  README.HYPERBOLE  README.OO-BROWSER  SERVICE  TUTORIAL.de  TUTORIAL.fr  TUTORIAL.ja  TUTORIAL.ru  aliases.ksh  check_cygwin_setup.sh  editclient.sh  gnuserv.1  package-index.LATEST.pgp  recycle.xpm  sample.Xdefaults  sample.emacs  sample.init.el  xemacs-fe.sh  xemacs-ja.1  xemacs.1
info/: cl.info  cl.info-1  cl.info-2  cl.info-3  cl.info-4  cl.info-5  cl.info-6  custom.info  dir  emodules.info  external-widget.info  info.info  internals.info  internals.info-1  internals.info-2  internals.info-3  internals.info-4  internals.info-5  internals.info-6  internals.info-7  internals.info-8  internals.info-9  lispref.info  lispref.info-1  lispref.info-10  lispref.info-11  lispref.info-12  lispref.info-13  lispref.info-14  lispref.info-15  lispref.info-16  lispref.info-17  (+98 more)
modules/: Makefile.in  aclocal.m4  configure.in
modules/base64/: Makefile  Makefile.in  base64.c
modules/example/: Makefile.in  purified.c
modules/ldap/: Makefile  Makefile.in  eldap.c
modules/sample/: Makefile  sample.c
modules/zlib/: Makefile  Makefile.in  zlib.c
(+1873 files in other folders)
